# pure-paginate

./: default.nix  pure-paginate.cabal
src/Pure/: Paginate.hs
